<?xml version="1.0" encoding="utf-8"?>


    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AAD8DD"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView"
            style="@style/nameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name" />

        <EditText
            android:id="@+id/enter_hobbies"
            style="@style/general_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hobby_hint_text"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/done_button"
            style="@style/general_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="addHobbies"
            android:text="@string/done_text" />

        <TextView
            android:id="@+id/hobbies_text"
            style="@style/general_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <ScrollView
            style="@style/nameStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                style="@style/general_style"
                android:fontFamily="@font/habibi"
                android:text="@string/my_bio"
                tools:ignore="TextContrastCheck" />
        </ScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>


